--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
     "typescript": "^1.6.2"
+  },
+  "devDependencies": {
+    "globule": "^0.2.0",
+    "grunt": "^0.4.5",
+    "grunt-shell": "^1.1.2",
+    "ninja-build-gen": "^0.1.3"
   }
 }
