Autogen tsflags values after parsing tsconfig.json.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,6 +6,6 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "moduleResolution": "classic",
-        "target": "es5"
+        "target": "ES5"
     }
 }
